# pylibxdaq

./: .clang-format  .gitignore  .gitmodules  pyproject.toml  setup.py
.github/conan_profiles/: macos-15-arm64  macos-15-x64  ubuntu-24.04-x64  windows-2022-x64
.github/workflows/: build.yml  build_package.yml  publish.yml  publish_to_test.yml
pylibxdaq/: .gitignore  CMakeLists.txt  conanfile.txt  device.py  pyxdaq_device.cc
pylibxdaq/managers/: __init__.py
pylibxdaq/tests/: test_device_manager.cc
tests/: test_benchmark_datastream.py  test_deployment.py  test_device_api.py  test_device_wrapper.py  test_lifetime_datastream.py  test_lifetime_device.py  test_lifetime_manager.py  test_package.py  test_scan_devices.py
